--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialDesignComponents">
-        <activity android:name=".alertdialog.AlertDialogActivity"></activity>
+        <activity android:name=".floatingbutton.FloatingButtonActivity"></activity>
+        <activity android:name=".alertdialog.AlertDialogActivity" />
         <activity android:name=".snackbar.SnackBarActivity" />
         <activity android:name=".bottomnavigationview.BottomNavigationViewActivity" />
         <activity android:name=".MainActivity">
@@ -19,6 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
