--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialDesignComponents">
-        <activity android:name=".bottomappbar.BottomAppBarActivity"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
+        <activity android:name=".bottomsheet.BottomSheetActivity"></activity>
+        <activity
+            android:name=".bottomappbar.BottomAppBarActivity"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
         <activity android:name=".floatingbutton.FloatingButtonActivity" />
         <activity android:name=".alertdialog.AlertDialogActivity" />
         <activity android:name=".snackbar.SnackBarActivity" />
