--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialDesignComponents">
-        <activity android:name=".bottomsheet.BottomSheetActivity"></activity>
+        <activity android:name=".datepicker.DatePickerActivity"></activity>
+        <activity android:name=".bottomsheet.BottomSheetActivity" />
         <activity
             android:name=".bottomappbar.BottomAppBarActivity"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
